# Project1

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  NotClosedComment.cpp  NotClosedComment.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QMarkAutomaton.cpp  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rules.cpp  Rules.h  RulesAutomaton.cpp  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  (+3 more)
Project 2/: AddAutomaton.cpp  Automaton.h  ColonAutomaton.cpp  CommentAutomaton.cpp  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomaton.cpp  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  NotClosedString.cpp  NotClosedString.h  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  QMarkAutomaton.h  Relation.cpp  Relation.h  Rules.h  RulesAutomaton.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  main.cpp
lab1.dSYM/Contents/Resources/DWARF/: lab1
